--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,17 @@ dependencies = [
     "flask-migrate (>=4.1.0,<5.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "flask-cors (>=6.0.1,<7.0.0)"
 ]
 
 packages = [{ include = "docai_backend" }]
 
 [tool.poetry.scripts]
 flask = "flask.cli:main"
+
+[tool.poetry.dependencies]
+python = ">=3.13,<4.0"
+flask-cors = { version = "^6.0.1", python = "<4.0" }
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
