--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "flask-migrate (>=4.1.0,<5.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "flask-cors (>=6.0.1,<7.0.0)"
+    "flask-cors (>=6.0.1,<7.0.0)",
+    "langchain-google-genai (>=3.1.0,<4.0.0)"
 ]
 
 packages = [{ include = "docai_backend" }]
