--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "flask-cors (>=6.0.1,<7.0.0)",
     "langchain-google-genai (>=3.1.0,<4.0.0)",
     "langchain-xai (>=1.1.0,<2.0.0)",
-    "langchain-groq (>=1.1.0,<2.0.0)"
+    "langchain-groq (>=1.1.0,<2.0.0)",
+    "python-docx (>=1.2.0,<2.0.0)",
+    "markdown (>=3.10,<4.0)",
+    "beautifulsoup4 (>=4.14.3,<5.0.0)"
 ]
 
 packages = [{ include = "docai_backend" }]
